# blog-writer

./: .env.example  .gitignore  README.md  blog.cmd  blog_engine_cli.py  blog_runtime.py  pyproject.toml  requirements.txt  runtime_guard.py
blogwriter/: cli.py
blogwriter_mcp/: __init__.py  server.py
blogwriter_mcp/tools/: __init__.py  creative_dna.py  performance_feedback.py  seo_optimizer.py
bots/: assist_bot.py  engine_loader.py  remote_claude.py  scheduler.py  shorts_bot.py  wp_publisher_bot.py  writer_bot.py
bots/converters/: shorts_converter.py  smart_video_router.py  video_engine.py
bots/distributors/: image_host.py  instagram_bot.py
bots/prompt_layer/: __init__.py  base.py  search_query.py  video_prompt.py  visual_vocabulary.py
bots/quality/: __init__.py  micro_signals.py
bots/shorts/: hook_optimizer.py  tts_engine.py
config/: creative_dna.json  engine.json  shorts_config.json
dashboard/: README.md  start.bat  start.sh  start_dev.bat
dashboard/backend/: __init__.py  api_analytics.py  api_assist.py  api_connections.py  api_content.py  api_cost.py  api_logs.py  api_novels.py  api_overview.py  api_settings.py  api_tools.py  server.py
dashboard/frontend/: index.html  package.json  tailwind.config.js  vite.config.js
dashboard/frontend/src/: App.jsx
docs/superpowers/plans/: 2026-04-03-creative-dna-narrative-extension.md
scripts/: setup.bat
tests/: test_blog_engine_cli_contract.py  test_blogwriter_mcp_server.py  test_blogwriter_mcp_tools.py  test_cli_surface.py  test_paths_and_docs.py  test_writer_bot_mcp_integration.py
(+13 files in other folders)
